Prevent grid columns from collapsing

--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -1,7 +1,6 @@
 // The game grid, including all of its layers as well as individual chips
 
 #grid {
-  display: inline-block;
   position: relative;
   padding-top: $chip-size + ($chip-margin * 2);
   cursor: default;
@@ -10,6 +9,9 @@
   @include if-compact-layout() {
     padding-top: $chip-size-compact + ($chip-margin-compact * 2);
   }
+}
+#grid-columns {
+  display: flex;
 }
 .grid-column {
   display: inline-flex;
